# quick-maths

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
quick_maths/: main.py
tests/: test_main.py
